# my_finance_app1

./: .env_template  .gitignore  =  Makefile  README.md  load_data.py  pyproject.toml  requirements.txt  user_settings.json
data/output/: report.xlsx
src/: __init__.py  api_client.py  config.py  main.py  models.py  reports.py  services.py  views.py
src/models/: operation.py  operations.py
src/reports/: category.py
src/services/: __init__.py  analyzer.py  cashback.py  data_processor.py  excel_processor.py  finance_api.py  invest.py  reports.py  services.py  transactions.py
src/utils/: __init__.py  database.py  parsers.py
src/views/: events.py  home.py
src/web/: home.py
tests/: conftest.py  test_models.py  test_parsers.py  test_reports.py  test_services.py  test_views.py
tests/test_services/: test_analyzer.py  test_data_processor.py  test_excel_processor.py  test_finance_api.py  test_reports.py  test_services.py
