[tool.poetry]
name = "my-finance-app1"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"
pandas = "^2.3.1"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
xlsxwriter = "^3.2.5"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.43"
spglib = "^2.6.0"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
python-dotenv = "^1.1.1"
celery = "^5.5.3"
redis = "^6.2.0"
reportlab = "^4.4.2"
fpdf2 = "^2.8.3"
fastapi-slim = "^0.116.1"
swagger-ui-bundle = "^1.1.0"
loguru = "^0.7.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[tool.isort]
line-length = 119

[tool.black]
line-length = 119
exclude = ".git"

[tool.mypy]
python_version = 3.9
warn_return_any =  true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "venv"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
